# discrete_diffgeo

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
src/: error.rs  lib.rs  prelude.rs
src/algorithms/: deformation.rs  geodesic.rs  harmonic_parameterization.rs  heat_diffusion.rs  mod.rs  normal_estimation.rs  parameterization.rs  pca.rs  poisson_reconstruction.rs  simplification.rs  smoothing.rs  spectral_clustering.rs  subdivision.rs
src/geometry/: area.rs  matrix.rs  mod.rs  predicate.rs  vector.rs
src/io/: mod.rs  obj.rs  off.rs  ply.rs  traits.rs  usd.rs  wrapper.h
src/mesh/: attributes.rs  half_edge.rs  mod.rs
src/operators/: curl.rs  curvature.rs  divergence.rs  gradient.rs  jacobian.rs  laplacian.rs  mod.rs  shape_operator.rs  traits.rs
