[package]
name = "discrete_differential"
version = "0.1.0"
edition = "2021"


[dependencies]
thiserror = "1.0"
nom = { version = "7.1", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
sprs = "0.11"
nalgebra = "0.32"
rayon = { version = "1.5", optional = true }
usd = { version = "0.1", optional = true }

[build-dependencies]
pkg-config = "0.3"
vcpkg = "0.2"
bindgen = { version = "0.65", features = ["runtime"] }
cc = "1.0"

[dev-dependencies]
proptest = "1.0"
criterion = "0.4"
tempfile = "3.3"
anyhow = "1.0"

[features]
parallel = ["rayon"]
usd = ["usd"]
